updated profile page, styles and fix bg color overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,34 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
-$primary : rgba(3, 182, 3, 0.555);
-$secondary : rgb(66, 121, 66);
-$accent : rgb(28, 103, 28);
+$primary : rgba(3, 182, 3, 0.884);
+$secondary : rgba(66, 121, 66, 0.752);
+$accent : rgb(221, 221, 221);
 $danger: red;
 
 @import "bootstrap";
 
-/* Provide sufficient contrast against white background */
-html, body {
-    width: inherit;
+html,
+body {
+    width: 100%;
     height: 100%;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .dark-theme {
-    background-color: rgba(65, 65, 65, 0.753);
-    color: rgba(233, 253, 230, 0.936);
+    background-color: $secondary;
+    color: #008000;
+
+    p {
+        color: darken($color: white, $amount: 30);
+    }
 
     h6 {
         color: $accent;
     }
-    
+
     button {
-        color: rgb(68, 67, 67);
-        background-color: $secondary;
+        color: darken($color: $primary, $amount: 17);
+        background-color: $primary;
+
         :hover,
         :focus {
-          box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-          transform: translateY(-0.25em);
+            box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+            transform: translateY(-0.25em);
+            color: $danger
         }
+    }
+
+    mat-tab {
+        background-color: $danger;
     }
 }
 
